Remove local settings and use web uris for audio files
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@5435 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-seam/ipbx/build.xml
+++ b/sip-servlets-seam/ipbx/build.xml
@@ -32,6 +32,7 @@
         <delete dir="WebContent/WEB-INF/classes"/>
     	<delete dir="${target.dir}"/>
     	<delete dir="${maven.deps}"/>
+    	<delete dir="warbuild"/>
     </target>
     <target depends="clean" name="cleanall"/>
     <target depends="build-project" name="build"/>
@@ -61,7 +62,7 @@
     	       basedir="${target.dir}"
     	  />
     </target>
-	<target name="deploy"> 
+	<target name="deploy" depends="build"> 
 		<copy todir="${env.JBOSS_HOME}/server/default/deploy" file="warbuild/ipbx.war"/>
 		<copy todir="${env.JBOSS_HOME}/server/default/deploy" file="resources/ipbx-ds.xml"/>
 	</target>
