--- a/sip-servlets-seam/ipbx/build.xml
+++ b/sip-servlets-seam/ipbx/build.xml
@@ -30,6 +30,7 @@
     </target>
     <target name="clean">
         <delete dir="WebContent/WEB-INF/classes"/>
+    	<delete dir="WebContent/WEB-INF/lib"/>
     	<delete dir="${target.dir}"/>
     	<delete dir="${maven.deps}"/>
     	<delete dir="warbuild"/>
