--- a/sip-servlets-seam/ipbx/build.xml
+++ b/sip-servlets-seam/ipbx/build.xml
@@ -72,13 +72,13 @@
 			<arg line="-f dependencies.xml install" />
 		</exec>
 		<delete failonerror="false" dir="${target.dir}/WEB-INF/lib"></delete>
-		<mkdir failonerror="false" dir="${target.dir}/WEB-INF/lib"/>
+		<mkdir dir="${target.dir}/WEB-INF/lib"/>
     	<copy todir="${target.dir}/WEB-INF/lib">
     		<fileset dir="${maven.deps}" 
     			includes="jboss-seam* drools* richfaces* mvel* jboss-el* jboss-el* commons-beanutils* commons-digest* antlr-run* mobicents-media-server-msc-api* jsf-facelet* jxl* jbpm* sip-servlets-seam*"></fileset>
     	</copy>
 		<!-- Copy the dependencies to the folder where JB Tools expects them to be -->
-		<mkdir failonerror="false" dir="WebContent/WEB-INF/lib"/>
+		<mkdir dir="WebContent/WEB-INF/lib"/>
 		<copy todir="WebContent/WEB-INF/lib">
 		    <fileset dir="${maven.deps}" 
 		    	includes="jboss-seam* drools* richfaces* mvel* jboss-el* jboss-el* commons-beanutils* commons-digest* antlr-run* mobicents-media-server-msc-api* jsf-facelet* jxl* jbpm* sip-servlets-seam*"></fileset>
