Fix + non regression test for Issue 658 : Allow sip servlets applications to work in non distributable environment even if marked as distributable (http://code.google.com/p/mobicents/issues/detail?id=658)
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@5474 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/.classpath
+++ b/sip-servlets-test-suite/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" output="applications/simple-sip-servlet/src/main/sipapp/WEB-INF/classes" path="applications/simple-sip-servlet/src/main/java"/>
+	<classpathentry kind="src" output="applications/distributable-servlet/src/main/sipapp/WEB-INF/classes" path="applications/distributable-servlet/src/main/java"/>
 	<classpathentry kind="src" output="applications/same-instance-servlet/src/main/sipapp/WEB-INF/classes" path="applications/same-instance-servlet/src/main/java"/>
 	<classpathentry kind="src" output="applications/no-main-servlet-app/src/main/sipapp/WEB-INF/classes" path="applications/no-main-servlet-app/src/main/java"/>
 	<classpathentry kind="src" output="applications/no-app-name-servlet/src/main/sipapp/WEB-INF/classes" path="applications/no-app-name-servlet/src/main/java"/>
