fix for jboss-5 release script
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@5556 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -229,7 +229,8 @@
 		</profile>
 		<profile>			
 			<id>jboss-5-distro</id>
-			<modules>				
+			<modules>
+				<module>sip-servlets-jboss5-metadata</module>				
 				<module>sip-servlets-jboss5</module>				
 			</modules>			
 		</profile>
