Add backup jboss repository directly from SVN to workaround IT probs
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@5562 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-seam/demo/pom.xml
+++ b/sip-servlets-seam/demo/pom.xml
@@ -13,6 +13,11 @@
 			<name>JBoss Repository</name>
 			<url>http://repository.jboss.org/maven2</url>
 		</repository>
+		<repository>
+			<id>backup.repository.jboss.org</id>
+			<name>JBoss Repository Backup</name>
+			<url>http://anonsvn.jboss.org/repos/repository.jboss.org/maven2/</url>
+		</repository>
 	</repositories>
 	<properties>
 		<seam.version>2.1.1.GA</seam.version>
