--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -86,7 +86,7 @@
 		<dependency>
 			<groupId>org.mobicents.tools</groupId>
 			<artifactId>sip-balancer</artifactId>
-			<version>1.0.BETA4-SNAPSHOT</version>
+			<version>1.0.BETA4</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
