[maven-release-plugin] prepare release release-0.9
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@5601 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/jopr-plugin/pom.xml
+++ b/jopr-plugin/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>jopr-mobicents-sip-servlets-plugin</artifactId>
-	<version>1.2-SNAPSHOT</version>
+	<version>1.2</version>
 	<packaging>jar</packaging>
 
 	<name>Jopr Mobicents Sip Servlets Plugin</name>
@@ -164,4 +164,10 @@
 			</plugin>
 		</plugins>
 	</build>
+
+  <scm>
+    <connection>scm:svn:https://mobicents.googlecode.com/svn/tags/servers/sip-servlets/release-0.9</connection>
+    <developerConnection>scm:svn:https://mobicents.googlecode.com/svn/tags/servers/sip-servlets/release-0.9</developerConnection>
+    <url>http://mobicents.googlecode.com/svn/tags/servers/sip-servlets/release-0.9</url>
+  </scm>
 </project>
