--- a/sip-servlets-test-suite/applications/session-state-uac/pom.xml
+++ b/sip-servlets-test-suite/applications/session-state-uac/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-test-suite-applications</artifactId>
-		<version>0.9-SNAPSHOT</version>
+		<version>0.9</version>
 	</parent>
 	<artifactId>session-state-uac</artifactId>
 	<packaging>war</packaging>
