--- a/jopr-plugin/pom.xml
+++ b/jopr-plugin/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>jopr-mobicents-sip-servlets-plugin</artifactId>
-	<version>1.2</version>
+	<version>1.3-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Jopr Mobicents Sip Servlets Plugin</name>
@@ -164,10 +164,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-  <scm>
-    <connection>scm:svn:https://mobicents.googlecode.com/svn/tags/servers/sip-servlets/release-0.9</connection>
-    <developerConnection>scm:svn:https://mobicents.googlecode.com/svn/tags/servers/sip-servlets/release-0.9</developerConnection>
-    <url>http://mobicents.googlecode.com/svn/tags/servers/sip-servlets/release-0.9</url>
-  </scm>
 </project>
