--- a/sip-servlets-examples/pom.xml
+++ b/sip-servlets-examples/pom.xml
@@ -3,12 +3,12 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>0.9</version>
+		<version>1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.example</groupId>
 	<artifactId>sip-servlets-examples-parent</artifactId>
-	<version>1.3</version>
+	<version>1.4-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Mobicents Sip Servlet Examples</name>
 	<url>http://www.mobicents.org/examples.html</url>
@@ -74,7 +74,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.9</version>
+			<version>1.1.10-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>		
 	</dependencies>	
