Fix for compilation failing
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@7939 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-jboss5/pom.xml
+++ b/sip-servlets-jboss5/pom.xml
@@ -117,7 +117,29 @@
 			<groupId>org.jboss.cache</groupId>
 			<artifactId>jbosscache-pojo</artifactId>
 			<version>3.0.0.GA</version>			
-		</dependency>			
+		</dependency>	
+		
+		<dependency>
+			<groupId>org.mobicents.cluster</groupId>
+			<artifactId>core</artifactId>
+			<version>1.0.0BETA1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>	
+		
+		<dependency>
+			<groupId>org.mobicents.cluster</groupId>
+			<artifactId>cache</artifactId>
+			<version>1.0.0BETA1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.mobicents.cluster</groupId>
+			<artifactId>timers</artifactId>
+			<version>1.0.0BETA1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+						
 	</dependencies>
 	
 	<repositories>
