Fix to example sipp script
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@7993 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-impl/docs/dar-callblocking-forwarding.properties
+++ b/sip-servlets-impl/docs/dar-callblocking-forwarding.properties
@@ -1,4 +1,4 @@
 OPTIONS: ("org.mobicents.servlet.sip.example.SimpleApplication", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "0")
 REGISTER: ("org.mobicents.servlet.sip.example.SimpleApplication", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "0")
-INVITE: ("org.mobicents.servlet.sip.testsuite.CallForwardingB2BUAApplication", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "0") \
-, ("org.mobicents.servlet.sip.testsuite.CallBlockingApplication", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "1")
+INVITE: ("org.mobicents.servlet.sip.example.CallForwardingB2BUAApplication", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "0") \
+, ("org.mobicents.servlet.sip.example.CallBlockingApplication", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "1")
