Fix for testsuite run by hudson
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@8116 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/testsuite/pom.xml
+++ b/sip-servlets-test-suite/testsuite/pom.xml
@@ -134,6 +134,12 @@
 			<artifactId>sip-balancer</artifactId>
 			<version>1.0.BETA7</version>
 		</dependency>
+		
+		<dependency>			
+			<groupId>org.mobicents.ha.javax.sip</groupId>
+			<artifactId>mobicents-jain-sip-ha-core</artifactId>
+			<version>0.1-SNAPSHOT</version>				
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
