Adding SMS Alerting to the alerting app
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@8122 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/alerting-app/jslee-events/events-du/pom.xml
+++ b/sip-servlets-examples/alerting-app/jslee-events/events-du/pom.xml
@@ -24,7 +24,7 @@
 			<plugin>
 				<groupId>org.mobicents.tools</groupId>
 				<artifactId>maven-du-plugin</artifactId>
-				<version>1.0.0.CR1</version>
+				<version>1.0.0.BETA3</version>
 				<extensions>true</extensions>
 				<configuration />
 				<executions>
