--- a/sip-servlets-examples/alerting-app/jslee-services/services-du/pom.xml
+++ b/sip-servlets-examples/alerting-app/jslee-services/services-du/pom.xml
@@ -24,7 +24,7 @@
 			<plugin>
 				<groupId>org.mobicents.tools</groupId>
 				<artifactId>maven-du-plugin</artifactId>
-				<version>1.0.0.CR1</version>
+				<version>1.0.0.BETA3</version>
 				<extensions>true</extensions>
 				<configuration />
 				<executions>
