Fix For Issue 1019 : (http://code.google.com/p/mobicents/issues/detail?id=1019) Provide JMX methods to enumerate, add or remove SIP listening points in MSS
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@8160 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-impl/.classpath
+++ b/sip-servlets-impl/.classpath
@@ -20,5 +20,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-annotations"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-spec"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-client"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
