--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -6,7 +6,6 @@
 		<version>1.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
-	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-impl</artifactId>
 	<packaging>jar</packaging>
 	<name>Sip Servlets Implementation</name>
@@ -25,6 +24,12 @@
 			<version>1.1-SNAPSHOT</version>			
 		</dependency>
 
+		<dependency>
+			<groupId>org.mobicents.servlet.sip</groupId>
+			<artifactId>sip-servlets-client</artifactId>
+			<version>1.1-SNAPSHOT</version>			
+		</dependency>
+		
 		<!-- logging dependency -->
 		<dependency>
 			<groupId>log4j</groupId>
