--- a/sip-servlets-tomcat-jboss4/pom.xml
+++ b/sip-servlets-tomcat-jboss4/pom.xml
@@ -49,6 +49,12 @@
 		</dependency>			
 		
 		<dependency>
+			<groupId>org.mobicents.servlet.sip</groupId>
+			<artifactId>sip-servlets-client</artifactId>
+			<version>1.1-SNAPSHOT</version>			
+		</dependency>
+		
+		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 			<version>${commons-logging.version}</version>
