adding sip servlets client project
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@8163 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
 	</scm>
 	<modules>
 		<module>sip-servlets-bootstrap</module>
+		<module>sip-servlets-client</module>
 		<module>sip-servlets-spec</module>
 		<module>sip-servlets-impl</module>
 		<module>sip-servlets-application-router</module>
