--- a/sip-servlets-test-suite/.classpath
+++ b/sip-servlets-test-suite/.classpath
@@ -54,9 +54,10 @@
 	<classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.12/log4j-1.2.12.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-tomcat-jboss4"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-annotations"/>
-	<classpathentry kind="var" path="M2_REPO/org/mobicents/tools/sip-balancer/1.0.BETA7/sip-balancer-1.0.BETA7.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/mobicents/tools/sip-balancer/1.0.BETA8-SNAPSHOT/sip-balancer-1.0.BETA8-SNAPSHOT.jar"/>
 	<classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-api/1.2/jain-sip-api-1.2.jar"/>
 	<classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-ri/1.2.122-SNAPSHOT/jain-sip-ri-1.2.122-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/mobicents/ha/javax/sip/mobicents-jain-sip-jboss4/0.1-SNAPSHOT/mobicents-jain-sip-jboss4-0.1-SNAPSHOT.jar"/>	
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-client"/>
 	<classpathentry kind="output" path="testsuite/target/test-classes"/>
 </classpath>
