--- a/sip-servlets-test-suite/applications/pom.xml
+++ b/sip-servlets-test-suite/applications/pom.xml
@@ -103,6 +103,12 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.mobicents.servlet.sip</groupId>
+			<artifactId>sip-servlets-spec</artifactId>
+			<version>1.1.11-SNAPSHOT</version>			
+		</dependency>
+		
+		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>annotations-api</artifactId>
 			<version>6.0.14</version>
