--- a/sip-servlets-test-suite/applications/pom.xml
+++ b/sip-servlets-test-suite/applications/pom.xml
@@ -104,7 +104,7 @@
 		
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
-			<artifactId>sip-servlets-spec</artifactId>
+			<artifactId>sip-servlets-client</artifactId>
 			<version>1.1.11-SNAPSHOT</version>			
 		</dependency>
 		
