temp fix for building MSS
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@8201 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -243,9 +243,10 @@
 			<param name="management.deploy.folder" value="${jboss-5.home}/server/${jboss.config}/deploy" />
 		</antcall>
 		
-		<exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/../../jopr-plugin-as-5">
+		<!-- comment temporarily the jopr 5 plugin -->
+		<!--exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/../../jopr-plugin-as-5">
 			<arg line="clean install -U -DJBOSS_HOME=${jboss-5.home} -Dnode=${jboss.config}" />
-		</exec>
+		</exec-->
 		
 		<condition property="ha.capable">
 			<or>
