--- a/sip-servlets-jboss5/pom.xml
+++ b/sip-servlets-jboss5/pom.xml
@@ -226,11 +226,19 @@
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
-					<artifactId>server-all-beans</artifactId>
-					<type>zip</type>
-					<classifier>beans</classifier>
+					<artifactId>timers</artifactId>										
 					<version>1.0.0BETA1-SNAPSHOT</version>
 				</dependency>				
+				<dependency>
+					<groupId>org.mobicents.cluster</groupId>
+					<artifactId>core</artifactId>										
+					<version>1.0.0BETA1-SNAPSHOT</version>
+				</dependency>
+				<dependency>
+					<groupId>org.mobicents.cluster</groupId>
+					<artifactId>cache</artifactId>										
+					<version>1.0.0BETA1-SNAPSHOT</version>
+				</dependency>
 			</dependencies>						
 			<build>			
 				<plugins>				
@@ -245,65 +253,12 @@
 										<goal>copy-dependencies</goal>
 		 	            			</goals>
 		 	            			<configuration>
-									<includeArtifactIds>sip-balancer,jain-sip-api,jain-sip-ri,dnsjava,stun4j,mobicents-jain-sip-jboss5</includeArtifactIds>
+									<includeArtifactIds>mobicents-jain-sip-jboss5,core,cache,timers</includeArtifactIds>
 					    			<outputDirectory>${env.JBOSS_HOME}/server/${node}/deploy/jbossweb.sar</outputDirectory>
 		 	            			</configuration>
-		 	          		</execution>
-		 	          		<execution>
-                                    <id>unpack-all</id>
-                                    <phase>compile</phase>
-                                    <goals>
-                                            <goal>unpack</goal>
-                                    </goals>
-                                    <configuration>
-                                            <artifactItems>
-                                                    <artifactItem>
-                                                            <groupId>org.mobicents.cluster</groupId>
-                                                            <artifactId>server-all-beans</artifactId>
-                                                            <type>zip</type>
-                                                            <classifier>beans</classifier>
-                                                    </artifactItem>
-                                            </artifactItems>
-                                            <outputDirectory>${project.build.directory}/${node}</outputDirectory>
-                                    </configuration>
-                            </execution> 
+		 	          		</execution>		 	          		
 		 	        	</executions>
-		 	      	</plugin>
-		 	      	<plugin>
-                                <artifactId>maven-antrun-plugin</artifactId>
-                                <executions>
-                                        <execution>
-                                                <id>deploy</id>
-                                                <phase>install</phase>
-                                                <goals>
-                                                        <goal>run</goal>
-                                                </goals>
-                                                <configuration>
-                                                        <tasks>
-                                                                <copy todir="${env.JBOSS_HOME}/server/${node}/deploy">
-                                                                        <fileset dir="${project.build.directory}/${node}" >                                                                         
-                                                                                <include name="mobicents-cluster/**" />
-                                                                        </fileset>                                                                      
-                                                                </copy>                                                                
-                                                        </tasks>
-                                                </configuration>
-                                        </execution>
-                                        <execution>
-                                                <id>undeploy</id>
-                                                <phase>clean</phase>
-                                                <goals>
-                                                        <goal>run</goal>
-                                                </goals>
-                                                <configuration>
-                                                        <tasks>
-                                                                <delete failonerror="false" includeemptydirs="true">
-                                                                        <fileset dir="${env.JBOSS_HOME}/server/${node}/deploy/mobicents-cluster" />
-                                                                </delete>                                                                
-                                                        </tasks>
-                                                </configuration>
-                                        </execution>
-                                </executions>
-                        </plugin>
+		 	      	</plugin>		 	      	
 				</plugins>
 			</build>
 		</profile>			
