--- a/sip-servlets-jboss5/pom.xml
+++ b/sip-servlets-jboss5/pom.xml
@@ -261,7 +261,58 @@
 		 	      	</plugin>		 	      	
 				</plugins>
 			</build>
-		</profile>			
+		</profile>
+		<profile>		
+			<id>jboss-5-cluster-distro</id>
+			<dependencies>
+				<dependency>
+					<groupId>org.mobicents.ha.javax.sip</groupId>
+					<artifactId>mobicents-jain-sip-ha-core</artifactId>
+					<version>0.1-SNAPSHOT</version>
+				</dependency>
+				<dependency>
+					<groupId>org.mobicents.ha.javax.sip</groupId>
+					<artifactId>mobicents-jain-sip-jboss5</artifactId>
+					<version>0.1-SNAPSHOT</version>
+				</dependency>
+				<dependency>
+					<groupId>org.mobicents.cluster</groupId>
+					<artifactId>timers</artifactId>										
+					<version>1.0.0BETA1-SNAPSHOT</version>
+				</dependency>				
+				<dependency>
+					<groupId>org.mobicents.cluster</groupId>
+					<artifactId>core</artifactId>										
+					<version>1.0.0BETA1-SNAPSHOT</version>
+				</dependency>
+				<dependency>
+					<groupId>org.mobicents.cluster</groupId>
+					<artifactId>cache</artifactId>										
+					<version>1.0.0BETA1-SNAPSHOT</version>
+				</dependency>
+			</dependencies>						
+			<build>			
+				<plugins>				
+					<plugin>
+		 	        	<groupId>org.apache.maven.plugins</groupId>
+		 	        	<artifactId>maven-dependency-plugin</artifactId>
+		 	        	<executions>		 	          		
+		 	          		<execution>
+		 	            			<id>copy-to-jboss-lib</id>
+		 	            			<phase>package</phase>
+		 	            			<goals>
+										<goal>copy-dependencies</goal>
+		 	            			</goals>
+		 	            			<configuration>
+									<includeArtifactIds>mobicents-jain-sip-jboss5,core,cache,timers</includeArtifactIds>
+					    			<outputDirectory>${JBOSS_HOME}/server/${node}/deploy/jbossweb.sar</outputDirectory>
+		 	            			</configuration>
+		 	          		</execution>		 	          		
+		 	        	</executions>
+		 	      	</plugin>		 	      	
+				</plugins>
+			</build>
+		</profile>					
 		<profile>		
 			<id>jboss-5-distro</id>			
 			<build>			
